# simdex

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/simdex/: __init__.py
src/: collection.rs  commands.rs  config.rs  db.rs  entry.rs  lib.rs  main.rs  types.rs
src/api/: mod.rs
src/cli/: mod.rs
src/core/: collection.rs  db.rs  discovery.rs  entry.rs  mod.rs  polars.rs  types.rs
tests/: tests.ipynb
