[package]
name = "simdex"
version = "0.1.0"
edition = "2024"

[lib]
name = "simdex"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "simdex"
path = "src/main.rs"

[dependencies]
serde_json = "*"
serde = { version = "^1", features = ["derive"] }
serde_yaml = "^0.9"
walkdir = "^2"
hdf5 = { package = "hdf5-metno", version = "^0.10" }
chrono = "^0.4"
rusqlite = { version = "0.36.0", features = ["bundled"] }
clap = { version = "^4.5", features = ["derive"] }
tabled = "0.20.0"
tempfile = "3.20.0"
